@@ -13,6 +13,7 @@
 
 1.0.5
  * add command to stop compactions (CASSANDRA-1740)
+ * fix assertion error when forwarding to local nodes (CASSANDRA-3539)
 
 
 1.0.4
